# sakenowa_wrapper

./: .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml
src/: mypy.ini  sakenowa_wrapper.py  test_radar_chart.py  test_sakenowa.py
tests/: test_sakenowa_method.py
