[tool.poetry]
name = "sakenowa"
version = "0.1.0"
description = ""
authors = ["ironball"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.1"
numpy = "^1.19.1"
matplotlib = "^3.3.1"
MonkeyType = "^20.5.0"
flake8 = "^3.8.3"
autopep8 = "^1.5.4"
mypy = "^0.782"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
